Remove up and down arrow

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="nav-links absolute bg-black top-[-100%] left-0 w-[100%] border border-white md:hidden">
-            <ul class="flex flex-col md:flex-row gap-3">
+            <ul class="flex flex-col gap-3">
                 <a class="px-4 cursor-pointer hover:underline" href="https://www.google.com/">HOME</a>
                 <li class="px-4 cursor-pointer hover:underline ">ABOUT</li>
                 <li class="px-4 cursor-pointer hover:underline">CONTACT</li>
@@ -29,7 +29,7 @@
             </ul>
         </div>
         <div class="hidden md:block">
-            <ul class="flex flex-col md:flex-row ">
+            <ul class="flex md:flex-row ">
                 <!-- <li class="px-4 cursor-pointer hover:underline">HOME</li> -->
                 <a class="px-4 cursor-pointer hover:underline" href="https://www.google.com/">HOME</a>
                 <li class="px-4 cursor-pointer hover:underline ">ABOUT</li>
