--- a/index1.html
+++ b/index1.html
@@ -52,14 +52,14 @@
       }
   </script>
 
-  <script>
+  <!-- <script>
     const navBar = document.querySelector('.nav-bar')
     function read(r){
       r.name = r.name === 'chevron-down-outline'? 'chevron-up-outline':'chevron-down-outline';
-      navBar.classList.toggle('top-[57%]')
+      navBar.classList.toggle('top-[60%]')
     }
 
-  </script>
+  </script> -->
   
   <!-- About Section start-->
   <div class="bg-white h-auto px-4 py-2 mx-4 my-0 rounded-2xl">
@@ -74,11 +74,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. In ad aspernatur sapiente, quaerat laborum explicabo nulla provident, pariatur perspiciatis repellat, accusantium iste suscipit dolore nihil voluptatibus molestias dolor quas placeat.
       </div>
       
-      <div class="nav-bar absolute bg-white top-[-1000%] px-3 mr-7">
+      <div class="bg-white px-3 mr-7">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ullam adipisci delectus ex atque, dignissimos quidem dolore itaque alias dolor, expedita explicabo blanditiis architecto repellat accusamus corporis hic. Esse ullam consequatur porro exercitationem eius harum at ipsum quasi? Facilis ratione ipsa, possimus aliquid pariatur, cum quas, velit suscipit similique exercitationem neque voluptatem? Dolorem nisi cupiditate tempore dignissimos voluptas aspernatur atque dolores. Quas facere, provident dolores numquam at accusamus dolorem deserunt reprehenderit eos distinctio doloribus ex officia dignissimos itaque repellat quae quaerat, officiis aut, consequuntur voluptates. Saepe esse ab minima quo necessitatibus vel cum nam perferendis, impedit alias, deserunt nesciunt! Delectus adipisci nesciunt voluptate perferendis consequatur placeat quo? Nostrum, facere! Nihil!</p>
       </div>
 
-      <ion-icon onclick="read(this)" class="p-3 text-2xl cursor-pointer" name="chevron-down-outline"></ion-icon>
+      
     </div>
   </div>
   <!-- About Section end-->
