Adding link of about section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <div class="nav-links absolute bg-black top-[-100%] left-0 w-[100%] border border-white md:hidden">
             <ul class="flex flex-col gap-3">
-                <a class="px-4 cursor-pointer hover:underline" href="https://www.google.com/">HOME</a>
-                <li class="px-4 cursor-pointer hover:underline ">ABOUT</li>
+                <li class="px-4 cursor-pointer hover:underline ">HOME</li>
+                <a class="px-4 cursor-pointer hover:underline" href="http://127.0.0.1:5501/index1.html">ABOUT</a>
                 <li class="px-4 cursor-pointer hover:underline">CONTACT</li>
                 <li class="px-4 bg-indigo-700 rounded-md cursor-pointer hover:underline">Sign in</li>
                 
